feat: 26.1 migration